Fix and create a workflow
Update the GitHub Actions workflow to compile and run the project.

* **Compile the project**
  - Change the `run` command to `gcc main.c -o student_record_system`

* **Run the compiled program**
  - Add a new step to run the compiled program with `./student_record_system`

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/Unilagstudent/Student_Record_System?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run configure script
-      run: ./path/to/configure  # Update the path if necessary
-    - name: Build
-      run: make
+    - name: Compile
+      run: gcc main.c -o student_record_system
+    - name: Run
+      run: ./student_record_system
